# hack-pdf-examples-py

./: .gitignore  README.md  pdf_signature_attack.py  pyproject.toml
src/pdf_compare_certificates/: EXAPLAIN.md  README.md  main.py  script-generate-cert-selfsigned.sh
src/pdf_signature_attack/: EXPLAIN.md  README.md  como_funciona_usando_ES.md  como_funciona_usando_pymupdf_ES.md  how_it_works_using_pikepdf_EN.md  how_it_works_using_pymupdf_EN.md  simulate_pdf_signature_attack_pikepdf.py  simulate_pdf_signature_attack_pymupdf.py
